# tayseer_ws_commander

./: .gitignore
src/tayseer_commander/: package.xml  setup.cfg  setup.py  test_llm.py
src/tayseer_commander/backup/: commander_node.py  world_model.py
src/tayseer_commander/config/: system_prompt copy 2.txt  system_prompt.txt
src/tayseer_commander/launch/: commander.launch.py  full_mock.launch.py
src/tayseer_commander/tayseer_commander/: commander_node.py  llm_client.py  world_model.py
src/tayseer_interfaces/: CMakeLists.txt  package.xml
src/tayseer_interfaces/action/: ArmManipulation.action  Navigate.action  NavigateToObject.action  PickObject.action  PlaceObject.action  SlideObject.action
src/tayseer_interfaces/srv/: GetObjectLocation.srv  ListObjects.srv  UpdateObject.srv
src/tayseer_mock/: package.xml  setup.cfg  setup.py
src/tayseer_mock/tayseer_mock/: mock_action_servers.py  mock_perception.py
src/tayseer_web/: package.xml  setup.cfg  setup.py
src/tayseer_web/tayseer_web/: web_server.py
src/tayseer_web/web/: index.html  script.js  styles.css
src/yolo_detector/: package.xml  setup.cfg  setup.py
src/yolo_detector/launch/: detector.launch.py
src/yolo_detector/yolo_detector/: detector_node.py  grasp_executor.py
src/yolo_detector/yolo_detector/temp/: detector_node.py  gd-only.py  gd-sam-image.py  gd-sam.py
