<?xml version="1.0"?>
<package format="3">
  <name>yolo_detector</name>
  <version>0.0.1</version>
  <description>YOLOv8m object detection for Tayseer</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_py</depend>
  <depend>franka_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>